--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body{
 
 text-decoration:none;
     text-align: center;
-    justify-items: center; background-image:url("../Images/music.png") ;
+    justify-items: center; background-image:url("./Images/music.png") ;
     background-size:cover ;
     background-repeat: no repeat;
     background-attachment: fixed;
